--- a/index.html
+++ b/index.html
@@ -10,8 +10,38 @@
 </head>
 
 <body>
-    <h1>Tic Tac Toe</h1>
+    <div class="wrapper">
+        <div class="left">
+            <div class="title">
+                <h1>Let`s play <br> the Tic-tac-toe Game!</h1>
+            </div>
+            <div class="restart">Start a New Game</div>
+        </div>
+        <div class="right">
+            <div class="game">
+                <div class="header">
+                    <div class="player-X">
+                        <span>Player X</span>
+                    </div>
+                    <div class="player-O">
+                        <span>Player O</span>
+                    </div>
+                </div>
+                <div class="board">
+                    <div class="board-tile" data-index="0"></div>
+                    <div class="board-tile" data-index="1"></div>
+                    <div class="board-tile" data-index="2"></div>
+                    <div class="board-tile" data-index="3"></div>
+                    <div class="board-tile" data-index="4"></div>
+                    <div class="board-tile" data-index="5"></div>
+                    <div class="board-tile" data-index="6"></div>
+                    <div class="board-tile" data-index="7"></div>
+                    <div class="board-tile" data-index="8"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/main.js" type="module"></script>
 </body>
 </html>
